# WhiteLee

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  T-005-spec.md  T-008-spec.md  T-010-spec.md  pyproject.toml  retale_dota2_8879557061.codex.json  retale_dota2_8879557061.md  slark.codex.json
.conductor/: config.yaml  rules.md
.conductor/reports/: T-001-report.md  T-002-report B.md  T-003-report B.md  T-004-report B.md  T-005-report.md  T-006-report B.md  T-007-report B.md  T-008-report.md  T-009-report.md  T-010-report B.md  T-011-report.md  T-012-report.md  T-013-report.md
.conductor/tasks/: T-001-dota-2-adapter-chat-gold-swing-momentum-.md  T-002-cs2-adapter-outcome-resolution-round-sta.md  T-003-epub-export-stdlib-only.md  T-004-dota-2-hero-name-resolution-unparsed-mat.md  T-005-dota-2-chat-filtering-building-enrichmen.md  T-006-styler-hardening-reasoning-model-budgets.md  T-007-terminology-codex-naming-conventions-tit.md  T-008-combat-texture-teamfight-ability-item-us.md  T-009-resilience-429-5xx-backoff-retry-chapter.md  T-010-chat-wheel-resolution-taunt-tagging-hubr.md  T-011-story-scout-worthiness-scoring-protagoni.md  T-012-rename-retale-to-whitelee-package-cli-en.md  T-013-release-hardening-fort-silence-windows-c.md
.github/workflows/: ci.yml
retale/: cli.py
retale/adapters/: base.py  (+2 more)
styles/: adventure.yaml  chronicle_zh.yaml  hardboiled.yaml  wuxia.yaml
tests/: __init__.py  test_cs2_adapter.py  test_epub.py  test_pipeline.py  test_resilience.py  test_scout.py  test_styler_codex.py  test_styler_hardening.py
whitelee/: cli.py
(+17 files in other folders)
