[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whitelee"
version = "0.1.0"
description = "Turn your gameplay into literature - a game-session-to-novel engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "WhiteLee contributors" }]
keywords = ["games", "narrative", "llm", "dota2", "cs2", "storytelling", "whitelee"]
dependencies = [
  "requests>=2.28",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
cs2 = ["demoparser2>=0.30", "pandas>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
whitelee = "whitelee.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["whitelee"]

[tool.ruff]
line-length = 100
